--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
         
         <span class="d-none d-lg-block">
-          <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/cvpic.jpg" alt="">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/cvpic" alt="">
         </span>
       </a>
@@ -69,7 +68,7 @@
           <h1 class="mb-0">Sayan
             <span class="text-primary">Bishnu</span>
           </h1>
-          <div class="subheading mb-5">#1021,Tall Oaks Apartment,2330 North Oliver Street · Wichita,Kansas-67220 · (316) 655-3909 ·
+          <div class="subheading mb-5">#1021,Tall Oaks Apartment,2330 North Oliver Street · Wichita,Kansas-67220  |(316) 655-3909 ·
             <a href="mailto:name@email.com">sxbishnu@shockers.wichita.edu</a>
           </div>
           <p class="mb-5">I have 1.8 years of experience as a Software Developer in Capgemini. I used to work as a full stack web developer for client GE.I left the organization to my own accord as a Senior Analyst.</p>
