--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <span class="text-primary">Bishnu</span>
           </h1>
           <div class="subheading mb-5">#1021,Tall Oaks Apartment,2330 North Oliver Street , Wichita,Kansas-67220 , (316)-655-3909 , <a href="mailto:name@email.com">sxbishnu@shockers.wichita.edu</a> <br>
-            <a href="/pdf/resume.pdf"download="resume.pdf">Download Resume</a>
+            <a href="/pdf/resume.pdf"download="resume.pdf">Download my Resume</a>
           </div>
           <p class="mb-5">I have 1.8 years of experience as a Software Developer in Capgemini. I used to work as a full stack web developer for client GE.I left the organization to my own accord as a Senior Analyst.</p>
           <ul class="list-inline list-social-icons mb-0">
