--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
           </li>
+		  <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -72,7 +75,7 @@
           <div class="subheading mb-5">#1021,Tall Oaks Apartment,2330 North Oliver Street , Wichita,Kansas-67220 |(316)-655-3909 , <a href="mailto:name@email.com">sxbishnu@shockers.wichita.edu</a> <br>
             <a href="/pdf/resume.pdf"download="resume.pdf" style="color:#58a318">Download my Resume</a>
           </div>
-          <p class="mb-5">I have 1.8 years of experience as a Software Developer in Capgemini. I used to work as a full stack web developer for client GE.I left the organization to my own accord as a Senior Analyst.</p>
+          <p class="mb-5">Self-Motivated and highly professional Software Engineer with 1.8 years of experience as a Software Developer in Capgemini. I used to work as a full stack web developer for client GE.I left the organization to my own accord as a Senior Analyst. I am a hard-working team player seeking to leverage my skills in the field of Computer Science.</p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/sayan.bishnu.3">
@@ -121,7 +124,7 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Web Developer</h3>
               <div class="subheading mb-3">IGATE</div>
-              <p>Completed web development training and build a web application successfully as a trainee using Spring MVC</p>
+              <p>Completed web development training and build a web application successfully as a trainee using Spring MVC.</p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">October 2015 - January 2016</span>
@@ -138,17 +141,6 @@
         <div class="my-auto">
           <h2 class="mb-5">Education</h2>
 
-          <div class="resume-item d-flex flex-column flex-md-row mb-5">
-            <div class="resume-content mr-auto">
-              <h3 class="mb-0">Academy of Technology</h3>
-              <div class="subheading mb-3">Bachelor of Computer Science and Engineering</div>
-               <p>GPA: 3.65</p>
-            </div>
-            <div class="resume-date text-md-right">
-              <span class="text-primary">August 2011 - June 2015</span>
-            </div>
-          </div>
-
           <div class="resume-item d-flex flex-column flex-md-row">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Wichita State University</h3>
@@ -159,8 +151,17 @@
               <span class="text-primary">August 2017- present</span>
             </div>
           </div>
-
-        </div>
+  		    <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0">Academy of Technology</h3>
+              <div class="subheading mb-3">Bachelor of Computer Science and Engineering</div>
+               <p>GPA: 3.65</p>
+            </div>
+            <div class="resume-date text-md-right">
+              <span class="text-primary">August 2011 - June 2015</span>
+            </div>
+          </div>
+          </div>
       </section>
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
@@ -228,20 +229,56 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Scholarship and certificate from Suburban educational Society for scoring good marks in 10th standard</li>
+              Scholarship and certificate from Suburban educational Society for scoring good marks in 10th standard.</li>
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Scholarship and certificate from Suburban educational Society for scoring good marks in 12th standard</li>
+              Scholarship and certificate from Suburban educational Society for scoring good marks in 12th standard.</li>
             <li>
               <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Completed corporate training as a Full stack Java developer from IGATE CORPORATE UNIVERSITY</li>
+              Completed corporate training as a Full stack Java developer from IGATE CORPORATE UNIVERSITY.</li>
             <li>
           </ul>
         </div>
       </section>
+	  <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
+        <div class="my-auto">
+          <h2 class="mb-5">PROJECTS</h2>
+
+          <div class="resume-item d-flex flex-column flex-md-row mb-5">
+            <div class="resume-content mr-auto">
+              <h3 class="mb-0"></h3>
+			  <ul>
+			  <li>
+              <div class="subheading mb-3">Star Group of Hotels(Online Hotel Booking)</div>
+               <p><b>Technologies used</b></p>
+			   <p>HTML5,CSS,JS,Bootstrap,Spring MVC,Oracle.</p>
+			   </li>
+			<li>
+              <div class="subheading mb-3">Plant Cost Estimator & Plant Cost Intelligence</div>
+               <p><b>Technologies used</b></p>
+			   <p>HTML5,CSS,JS,ajax,jquery,Bootstrap,Spring MVC,Restful Web Service,Oracle.</p>
+			   </li>
+			<li>
+              <div class="subheading mb-3">Assist Me(Assistance for Outdoor and Indoor Navigation for the blind users)</div>
+               <p><b>Technologies used</b></p>
+			   <p>Android,Firebase. </p>
+            </div>
+			</li>
+            </ul>
+            </div>
+			
+            </div>
+			
+          </div>
+          
+        </div>
+      </section>
 
     </div>
+	
+
+
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
